--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@laylazi/bootstrap-rtl": "^4.6.1-1",
+    "@laylazi/bootstrap-rtl": "^4.5.3-1",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
-    "jquery": "^3.6.0",
-    "mini-css-extract-plugin": "^2.6.1",
+    "css-loader": "^5.0.1",
+    "expose-loader": "^1.0.3",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "jquery": "^3.5.1",
+    "mini-css-extract-plugin": "^1.3.1",
     "popper.js": "^1.16.1",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1"
   }
 }
